@@ -84,16 +84,21 @@
 /* latest monitoring */
 .latest-mon .tableinfo { table-layout: fixed; }
 .latest-mon .tableinfo td:first-child { width: 15px; padding: 0; }
-.latest-mon .tableinfo td:nth-child(2) { width: 25%; }
-.latest-mon .tableinfo td:nth-child(7) { width: 8%; }
-.latest-mon .tableinfo td:nth-child(11) { width: 4%; }
-.latest-mon .tableinfo td:nth-child(11) div { float: left; }
+.latest-mon .tableinfo td.latest-host { width: 10%; }
+.latest-mon .tableinfo td.latest-item { width: 25%; }
 .latest-mon .tableinfo td,
 .latest-mon .tableinfo div.txt,
 .latest-mon .tableinfo td span,
-.latest-mon .tableinfo td:nth-child(10) a { overflow: hidden; text-overflow: ellipsis; }
+.latest-mon .tableinfo td.latest-actions a {
+	overflow: hidden; text-overflow: ellipsis;
+}
 .latest-mon .tableinfo td span,
-.latest-mon .tableinfo td:nth-child(10) a { float: left; max-width: 100%; }
+.latest-mon .tableinfo td.latest-actions a {
+	float: left; max-width: 100%;
+}
+.latest-mon .tableinfo.latest-details td.latest-lastcheck { width: 9%; }
+.latest-mon .tableinfo.latest-details td.latest-error { width: 4%; }
+.latest-mon .tableinfo.latest-details td.latest-error div { float: left; }
 
 /* regexp test result table, based on .tableinfo */
 #testResultTable tr td:first-child { width: auto; }
